# docs/swagger.yaml
@@ -90,6 +90,32 @@ definitions:
       coach:
         $ref: '#/definitions/models.Coach'
     type: object
+  models.WorkoutLog:
+    properties:
+      duration:
+        type: number
+      id:
+        type: string
+      notes:
+        type: string
+      performedAt:
+        type: string
+      relationships:
+        $ref: '#/definitions/models.WorkoutLogRelations'
+      totalVolume:
+        type: string
+      userId:
+        type: string
+      workoutId:
+        type: string
+    type: object
+  models.WorkoutLogRelations:
+    properties:
+      user:
+        $ref: '#/definitions/models.Users'
+      workout:
+        $ref: '#/definitions/models.Workouts'
+    type: object
   models.Workouts:
     properties:
       createdAt:
@@ -118,7 +144,7 @@ info:
     url: https://github.com/vrstelios/GoAPIBackEnd
   description: A Tag service API in Go using Gin framework
   title: EndPoints
-  version: "1.3"
+  version: "1.5"
 paths:
   /Coach/{name}:
     get:
@@ -196,7 +222,7 @@ paths:
       summary: Logout user.
       tags:
       - auth
-  /auth/register:
+  /auth/signup:
     post:
       description: Creates a new user account with username and password
       parameters:
@@ -229,7 +255,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.APIError'
-      summary: Register a new user.
+      summary: Signup a new user.
       tags:
       - auth
   /coach:
@@ -341,8 +367,45 @@ paths:
       summary: Get Exercise.
       tags:
       - Exercise
+  /workoutLogs:
+    post:
+      parameters:
+      - description: Workout Log
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/models.WorkoutLog'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.APIError'
+        "208":
+          description: Already Reported
+          schema:
+            $ref: '#/definitions/models.APIError'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.APIError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.APIError'
+      summary: Create Workout Log.
+      tags:
+      - WorkoutLog
   /workouts:
     get:
+      description: Query workouts with optional user filtering
+      parameters:
+      - description: Filter by user Id
+        in: query
+        name: userId
+        type: string
       produces:
       - application/json
       responses:
